--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit>=1.24.0
-pandas>=2.0.0
-plotly>=5.20.0
-openpyxl>=3.1.0
-kaleido>=0.2.1
+streamlit
+pandas
+openpyxl
+plotly
+kaleido
 python-dotenv
